--- a/src/experimentation.ipynb
+++ b/src/experimentation.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -37,21 +37,21 @@
       "  mode, _ = stats.mode(_y[neigh_ind, k], axis=1)\n",
       "/home/mwanikii/.local/lib/python3.10/site-packages/sklearn/neighbors/_classification.py:237: FutureWarning: Unlike other reduction functions (e.g. `skew`, `kurtosis`), the default behavior of `mode` typically preserves the axis it acts along. In SciPy 1.11.0, this behavior will change: the default value of `keepdims` will become False, the `axis` over which the statistic is taken will be eliminated, and the value None will no longer be accepted. Set `keepdims` to True or False to avoid this warning.\n",
       "  mode, _ = stats.mode(_y[neigh_ind, k], axis=1)\n",
-      "/tmp/ipykernel_4742/1293387523.py:42: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/tmp/ipykernel_49174/2588607900.py:44: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  results = results.append({\n",
-      "/tmp/ipykernel_4742/1293387523.py:42: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/tmp/ipykernel_49174/2588607900.py:44: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  results = results.append({\n",
-      "/tmp/ipykernel_4742/1293387523.py:42: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/tmp/ipykernel_49174/2588607900.py:44: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  results = results.append({\n",
-      "/tmp/ipykernel_4742/1293387523.py:42: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/tmp/ipykernel_49174/2588607900.py:44: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  results = results.append({\n",
-      "/tmp/ipykernel_4742/1293387523.py:42: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/tmp/ipykernel_49174/2588607900.py:44: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  results = results.append({\n",
-      "/tmp/ipykernel_4742/1293387523.py:42: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/tmp/ipykernel_49174/2588607900.py:44: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  results = results.append({\n",
-      "/tmp/ipykernel_4742/1293387523.py:42: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/tmp/ipykernel_49174/2588607900.py:44: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  results = results.append({\n",
-      "/tmp/ipykernel_4742/1293387523.py:42: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/tmp/ipykernel_49174/2588607900.py:44: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  results = results.append({\n"
      ]
     },
@@ -86,51 +86,51 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>XGB</td>\n",
-       "      <td>0.872006</td>\n",
-       "      <td>0.447158</td>\n",
-       "      <td>0.659582</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>LGB</td>\n",
-       "      <td>0.874003</td>\n",
-       "      <td>0.443880</td>\n",
-       "      <td>0.658942</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>LR</td>\n",
-       "      <td>0.874342</td>\n",
-       "      <td>0.410581</td>\n",
-       "      <td>0.642461</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>RT</td>\n",
-       "      <td>0.854919</td>\n",
-       "      <td>0.426510</td>\n",
-       "      <td>0.640714</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>DT</td>\n",
-       "      <td>0.820104</td>\n",
-       "      <td>0.392001</td>\n",
-       "      <td>0.606052</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>KNN</td>\n",
-       "      <td>0.854662</td>\n",
-       "      <td>0.335947</td>\n",
-       "      <td>0.595305</td>\n",
+       "      <td>0.873536</td>\n",
+       "      <td>0.451148</td>\n",
+       "      <td>0.662342</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>MLP</td>\n",
-       "      <td>0.796907</td>\n",
-       "      <td>0.363871</td>\n",
-       "      <td>0.580389</td>\n",
+       "      <td>0.871580</td>\n",
+       "      <td>0.450744</td>\n",
+       "      <td>0.661162</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>LGB</td>\n",
+       "      <td>0.877149</td>\n",
+       "      <td>0.441471</td>\n",
+       "      <td>0.659310</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>LR</td>\n",
+       "      <td>0.874172</td>\n",
+       "      <td>0.410026</td>\n",
+       "      <td>0.642099</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>RT</td>\n",
+       "      <td>0.853176</td>\n",
+       "      <td>0.423142</td>\n",
+       "      <td>0.638159</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>DT</td>\n",
+       "      <td>0.819296</td>\n",
+       "      <td>0.391149</td>\n",
+       "      <td>0.605222</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>KNN</td>\n",
+       "      <td>0.858403</td>\n",
+       "      <td>0.347177</td>\n",
+       "      <td>0.602790</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -145,17 +145,17 @@
       ],
       "text/plain": [
        "  Classifier  Avg_Accuracy  Avg_F1_Score  Avg_Overall\n",
-       "3        XGB      0.872006      0.447158     0.659582\n",
-       "4        LGB      0.874003      0.443880     0.658942\n",
-       "1         LR      0.874342      0.410581     0.642461\n",
-       "7         RT      0.854919      0.426510     0.640714\n",
-       "6         DT      0.820104      0.392001     0.606052\n",
-       "0        KNN      0.854662      0.335947     0.595305\n",
-       "2        MLP      0.796907      0.363871     0.580389\n",
+       "3        XGB      0.873536      0.451148     0.662342\n",
+       "2        MLP      0.871580      0.450744     0.661162\n",
+       "4        LGB      0.877149      0.441471     0.659310\n",
+       "1         LR      0.874172      0.410026     0.642099\n",
+       "7         RT      0.853176      0.423142     0.638159\n",
+       "6         DT      0.819296      0.391149     0.605222\n",
+       "0        KNN      0.858403      0.347177     0.602790\n",
        "5        SVC      0.859208      0.000000     0.429604"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,6 +213,16 @@
     "results[\"Avg_Overall\"] = (results[\"Avg_Accuracy\"] + results[\"Avg_F1_Score\"])/2\n",
     "results = results.sort_values(\"Avg_Overall\", ascending=False)\n",
     "results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the above, XGB and LGB have displayed the best Avg_Overall score. In the next attempt, the models will be designed to take in categorical data as it is rather than encoding it.\n",
+    "NB: This is when the date column has not been removed\n",
+    "\n",
+    "When the date column has been dropped, LGB is replaced by MLP while XGB maintains its position. \n"
    ]
   },
   {
