Updating xgboost hyperparameters

--- a/src/training_xgboost.ipynb
+++ b/src/training_xgboost.ipynb
@@ -11,6 +11,7 @@
     "from optuna.integration import XGBoostPruningCallback \n",
     "from sklearn.metrics import log_loss\n",
     "from sklearn.model_selection import StratifiedKFold\n",
+    "from sklearn.model_selection import train_test_split\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
@@ -35,10 +36,25 @@
     "        \"lambda\": trial.suggestion_int(\"lambda\", 0, 100, step=5),\n",
     "        \"alpha\": trial.suggestion_int(\"alpha\", 0, 100, step=5),\n",
     "        \"gamma\": trial.suggest_float(\"gamma\", 0, 15),\n",
-    "        \n",
+    "    }\n",
+    "    cv = StratifiedKFold(n_splits=5, shuffle=True, random_state=5)\n",
     "\n",
+    "    for idx, (train_idx, test_idx) in enumerate(cv.split(X, y)):\n",
+    "        X_train, X_test = X.iloc[train_idx], X.iloc[test_idx]\n",
+    "        y_train, y_test = y[train_idx], y[test_idx]\n",
     "\n",
-    "    }\n"
+    "        model = XGBClassifier(objective=\"binary\", **parameter_grid)\n",
+    "        model.fit(\n",
+    "            X_train,\n",
+    "            y_train,\n",
+    "            eval_set=[(X_test, y_test)],\n",
+    "            eval_metric=\"binary_logloss\",\n",
+    "            early_stopping_rounds=100)\n",
+    "\n",
+    "        preds = model.predict_proba(X_test)\n",
+    "        cv_scores[idx] = preds\n",
+    "\n",
+    "    return np.mean(cv_scores)\n"
    ]
   }
  ],
